ProFIT/objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <description>Displays the speaker&apos;s current company</description>
        <inlineHelpText>Enter the speaker&apos;s current company</inlineHelpText>
        <label>Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Displays the speaker&apos;s email</description>
        <inlineHelpText>Enter the speaker&apos;s email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Displays the speaker&apos;s phone number</description>
        <inlineHelpText>Enter the speaker&apos;s phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>